force-app/main/default/objects/Program_Eligibility_Criteria__c/Program_Eligibility_Criteria__c.object-meta.xml
<CustomObject>
    <label>Program Eligibility Criteria</label>
    <nameField>
        <displayFormat>PEC-{0000000}</displayFormat>
        <label>Program Eligibility Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Eligibility Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>