force-app/main/default/objects/Program_Eligibility_Criteria__c/fields/Eligibility_Item_Collection__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Item_Collection__c</fullName>
    <label>Eligibility Item Collection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>