force-app/main/default/objects/Program_Eligibility_Criteria__c/fields/Item_Collection_Period__c.field-meta.xml
<CustomField>
    <fullName>Item_Collection_Period__c</fullName>
    <label>Item Collection Period</label>
    <type>TextArea</type>
</CustomField>