force-app/main/default/objects/Program_Eligibility_Criteria__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Program Eligibility Criterias</relationshipLabel>
    <relationshipName>Program_Eligibility_Criterias</relationshipName>
    <type>Lookup</type>
</CustomField>